# video-enrichment-orm

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 4bcb127a9622_v0_1_0_initial_creation.py
tests/: conftest.py
tests/integration/: test_detection.py  test_entity.py  test_entity_media_gallery.py  test_segment_detection.py  test_taxonomy.py  test_video.py
tests/unit/: test_package.py
video_enrichment_orm/core/: batch.py  config.py  session_factory.py
video_enrichment_orm/dao/: __init__.py  detection.py  entity.py  entity_media_gallery.py  segment_detection.py  table_with_timestamps.py  taxonomy.py  video.py
video_enrichment_orm/exceptions/: integrity_exception.py  internal_server_error.py
video_enrichment_orm/managers/: db_detection.py  db_entity.py  db_entity_media_gallery.py  db_segment_detection.py  db_taxonomy.py  db_video.py
video_enrichment_orm/schemas/: detection.py  entity.py  entity_media_gallery.py  segment_detection.py  taxonomy.py  timestamps.py  video.py
